--- a/style.css
+++ b/style.css
@@ -152,3 +152,13 @@ footer a:hover {
   border: 1px solid black;
   border-radius: 0.5rem;
 }
+.blog-div {
+  width: 70%;
+  margin: 2rem auto;
+  padding: 2rem;
+  background-color: var(--bg-color);
+  border-radius: 2rem;
+}
+.blog-div h3 {
+  font-size: 30px;
+}
