--- a/style.css
+++ b/style.css
@@ -162,3 +162,20 @@ footer a:hover {
 .blog-div h3 {
   font-size: 30px;
 }
+.blog-div button {
+  background-color: black;
+  padding: 0.3rem;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+.blog-div a {
+  text-decoration: none;
+  color: white;
+}
+.blog-div a:hover {
+  text-decoration: underline;
+}
+.new-h3 {
+  font-size: 30px;
+  text-align: center;
+}
